# SharedData

./: .env_example  .gitignore  README.md  rename_to_dotenv  requirements.txt  setup.cfg
src/SharedData/: AWS.py  Logger.py  Metadata.py  SharedData.py  SharedDataAWS.py  SharedDataAWSKinesis.py  SharedDataAWSS3.py  SharedDataFeeder.py  SharedDataFrame.py  SharedDataPeriod.py  SharedDataTimeSeries.py
tests/: KinesisConsumer.py  KinesisLogConsumer.py  KinesisRealTimeConsumer.py  KinesisRealTimeProducer.py  KinesisTest.py  awstest.py  data.txt  test01.py  test01_logging.py  test02.py  test02_history_reading.py  test03_history_writing.py  test1.py  userconfig.py  userconfig_example.py
