[metadata]
name = shareddata
version = 0.0.9
author = Jose Carlito de Oliveira Filho
author_email = jcarlitooliveira@gmail.com
description = Shared Memory Database with S3 repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcarlitooliveira/SharedData
project_urls =
    Bug Tracker = https://github.com/jcarlitooliveira/SharedData/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    awscli==1.22.49
    boto3==1.20.41
    numpy==1.20.2
    pandas==1.2.4

[options.packages.find]
where = src